Removed em problem for Chrome

--- a/src/Containers/App.css
+++ b/src/Containers/App.css
@@ -1,17 +1,16 @@
 @import url("//fonts.googleapis.com/css?family=Playfair+Display");
 @import url("//fonts.googleapis.com/css?family=Merriweather");
-@import url("//fonts.googleapis.com/css?family=Circular");
 
 :root{
-  --fontsize-nav: 2rem;
+  --fontsize-nav: 2.5vh;
   --default-header-font: 'Playfair Display';
   --default-text-font: 'Merriweather';
-  --default-title-font: 'Circular';
+  --default-title-font: 'Merriweather';
   --default-highlight-color: rgba(29, 233, 206, 0.966);
   --default-header-color: rgba(22, 182, 161, 0.966);
   --default-title-color: rgba(11, 155, 136, 0.966);
   --default-margin: 14px;
-  --default-margin-top: 1vh;
+  --default-margin-top: 1.9vh;
   --default-margin-left: 2vw;
   --navigation-percent: 70%;
   --h1-content-font-size: 6.5vh;
@@ -25,17 +24,18 @@
 
 @media only screen and (max-width: 1500px) {
   :root{
-    --fontsize-nav: 1.5rem;
+    --fontsize-nav: 3.3vh;
     --default-margin: 8px;
-    --navigation-percent: 65%;
+    --navigation-percent: 68%;
     
   }
 }
 
 @media only screen and (max-width: 1000px) {
   :root{
-    --fontsize-nav: 1.25rem;
+    --fontsize-nav: 3.3vh;
     --default-margin: 8px;
+    --default-margin-top: 2.5vh;
     --navigation-percent: 55%;
     --h1-content-font-size: 6vh;
     --text-content-font-size: 3.5vh;
@@ -44,7 +44,7 @@
 
 @media only screen and (max-width: 600px) {
   :root{
-    --fontsize-nav: 0.8rem;
+    --fontsize-nav: 2vh;
     --default-margin: 2.2vh;
     --default-margin-top: 1.7vh;
     --default-margin-left: 4vw;
