--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -1,11 +1,12 @@
 .Header {
   background-image: url("../Resources/header-desktop-2.jpg");
   background-size: cover;
+  background-position: center;
   z-index: 0;
   width: 100%;
   height: 60vh;
   min-height: 700px;
-  font-size: calc(10px + 3vmin);
+  font-size: calc(10px + 1vw);
   color: white;
   box-shadow: 0 5px 10px -2px gray;
 }
@@ -30,7 +31,7 @@
 
 .HeaderButton{
   background-color: var(--default-highlight-color);
-  width: 10% !important;
+  width: 11% !important;
   height: 4vh !important;
   border-width: 1px;
   border-radius: 4vh;
@@ -41,7 +42,7 @@
   top: 45%;
   left: 30vw;
   font-family: var(--default-text-font);
-  font-size: calc(7px + 1vmin);
+  font-size: calc(7px + 1vw);
 }
 
 .HeaderButton:focus{
@@ -55,9 +56,9 @@
   }
 
   .HeaderButton{
-    width: 15% !important;
+    width: 14% !important;
     height: 30px !important;
-    font-size: calc(7px + 0.9vmin);
+    font-size: calc(7px + 0.8vw);
   }
 }
 
@@ -65,11 +66,11 @@
   .Header {
     background-image: url("../Resources/header-desktop-3.jpg");
     min-height: 300px;
-    font-size: calc(10px + 2vmin);
+    font-size: calc(10px + 2vw);
   }
 
   .HeaderButton{
-    width: 18% !important;
+    width: 17.5% !important;
     height: 30px !important;
   }
 }
@@ -107,9 +108,9 @@
     position: relative;
     width: 33vw !important;
     height: 10% !important;
-    top: 45%;
+    top: 43%;
     left: 0vw;
-    font-size: 0.8em;
+    font-size: 3.5vw;
     display: block;
     margin-left: auto;
     margin-right: auto;
