--- a/src/Containers/App.css
+++ b/src/Containers/App.css
@@ -2,7 +2,8 @@
 @import url("//fonts.googleapis.com/css?family=Merriweather");
 
 :root{
-  --fontsize-nav: 2.5vh;
+  --nav-bar-height: 7vh;
+  --fontsize-nav: calc(5px + 1.5vw);
   --default-header-font: 'Playfair Display';
   --default-text-font: 'Merriweather';
   --default-title-font: 'Merriweather';
@@ -13,8 +14,8 @@
   --default-margin-top: 1.9vh;
   --default-margin-left: 2vw;
   --navigation-percent: 70%;
-  --h1-content-font-size: 6.5vh;
-  --text-content-font-size: 3.5vh;
+  --h1-content-font-size: 3.5vw;
+  --text-content-font-size: 1.8vw;
 }
 
 .App {
@@ -24,7 +25,7 @@
 
 @media only screen and (max-width: 1500px) {
   :root{
-    --fontsize-nav: 3.3vh;
+    --fontsize-nav: calc(2px + 1.7vw);
     --default-margin: 8px;
     --navigation-percent: 68%;
     
@@ -33,23 +34,23 @@
 
 @media only screen and (max-width: 1000px) {
   :root{
-    --fontsize-nav: 3.3vh;
+    --fontsize-nav: calc(2px + 2vw);
     --default-margin: 8px;
     --default-margin-top: 2.5vh;
     --navigation-percent: 55%;
-    --h1-content-font-size: 6vh;
-    --text-content-font-size: 3.5vh;
+    --h1-content-font-size: 5vw;
+    --text-content-font-size: 1.9vw;
   }
 }
 
 @media only screen and (max-width: 600px) {
   :root{
-    --fontsize-nav: 2vh;
+    --fontsize-nav: 3.5vw;
     --default-margin: 2.2vh;
     --default-margin-top: 1.7vh;
     --default-margin-left: 4vw;
     --navigation-percent: 34%;
-    --h1-content-font-size: 8vw;
+    --h1-content-font-size: 6vw;
     --text-content-font-size: 4vw;
   }
 }
