--- a/src/Containers/NavigationBar.css
+++ b/src/Containers/NavigationBar.css
@@ -1,22 +1,18 @@
 .NavigationBar {
     background-color: rgba(0,0,0,0.6);
-    height: 7vh;
-    min-height: 60px;
+    height: var(--nav-bar-height);
+    min-height: 50px;
     z-index: 1;
-    font-size: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
 }
 
 .navigationItems {
   width: 95%;
   display: grid;
   grid-template-columns: var(--navigation-percent) 1.1fr 0.9fr 0.9fr;
-  margin-top: var(--default-margin-top);
-  margin-left: auto;
-  margin-right: auto;
-  z-index: 1;
-  font-size: 5px;
 }
-
 
 .active {
     font-weight: bolder;
