--- a/src/Components/Portfolio.css
+++ b/src/Components/Portfolio.css
@@ -1,13 +1,13 @@
-.Experience {
+.Portfolio {
   margin-top: calc(40px + 7vh);
   margin-left: auto;
   margin-right: auto;
-  width: 93%;
+  width: 95%;
   height: 100%;
   text-align: center;
 }
 
-.Experience h1 {
+.Portfolio h1 {
   font-family: var(--default-title-font); 
   font-style: normal; 
   font-variant: normal; 
@@ -17,7 +17,7 @@
   color: var(--default-title-color);
 }
 
-.Experience h2 {
+.Portfolio h2 {
   font-family: var(--default-title-font);
   width: 90%;
   margin-bottom: 0; 
@@ -30,25 +30,34 @@
   color: rgba(0,0,0,0.7);
 }
 
-.experienceCards {
+.portfolioCards {
   align-items: center;
+  width: 85%;
+  margin-left: auto;
+  margin-right: auto;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
 }
 
 @media only screen and (max-width: 1500px)  {
-  .Experience {
+  .Portfolio {
     margin-top: calc(40px + 5vh);
   }
 }
 
 @media only screen and (max-width: 600px)  {
-  .Experience {
+  .Portfolio {
     margin-top: calc(40px + 3.5vh);
   }
 
-  .experienceCards {
+  .portfolioCards {
+    align-items: center;
+    width: 85%;
+    margin-left: auto;
+    margin-right: auto;
+    display: grid;
     grid-template-columns: none;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
   }
 }
