--- a/src/Components/HomeContent.css
+++ b/src/Components/HomeContent.css
@@ -1,11 +1,11 @@
 .HomeContent {
-  margin-top: 8vh;
+  margin-top: 7vh;
   margin-left: auto;
   margin-right: auto;
   width: 85%;
   height: 100%;
   display: grid;
-  grid-template-rows: 85px 65px;
+  grid-template-rows: 45% 1fr;
   text-align: center;
 }
 
@@ -40,7 +40,7 @@
   .HomeContent {
     margin-top: 5vh;
     grid-template-columns: none;
-    grid-template-rows: 70px 65px;
+    grid-template-rows: 40% 1fr;
   }
 }
 
@@ -48,6 +48,6 @@
   .HomeContent {
     margin-top: 5vh;
     grid-template-columns: none;
-    grid-template-rows: 75px 65px;
+    grid-template-rows: 35% 1fr;
   }
 }
